@@ -1,3 +1,9 @@
+2006-08-28  Jason Merrill  <jason@redhat.com>
+
+	PR c++/26577
+	* cvt.c (convert_to_void): Don't automatically load from volatiles 
+	of TREE_ADDRESSABLE type.
+
 2006-08-28  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/28860
